--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "supjirallo",
   "version": "0.0.1",
   "description": "School project aiming to recreate an agile ticket manager. ",
-  "main": "index.js",
+  "main": " app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,7 +22,15 @@
   },
   "homepage": "https://github.com/titouanfreville/SupJirallo#readme",
   "dependencies": {
+    "bcryptjs": "^2.3.0",
+    "body-parser": "^1.15.1",
     "express": "^4.14.0",
-    "mongoose": "^4.5.0"
+    "express-jwt": "^3.4.0",
+    "express-session": "^1.13.0",
+    "jsonwebtoken": "^7.0.1",
+    "mongoose": "^4.5.0",
+    "mongoskin": "^2.1.0",
+    "q": "^1.4.1",
+    "rootpath": "^0.1.2"
   }
 }
