--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "express-jwt": "^3.4.0",
     "express-session": "^1.13.0",
     "jsonwebtoken": "^7.0.1",
+    "lodash": "^4.13.1",
     "mongoose": "^4.5.0",
     "mongoskin": "^2.1.0",
     "q": "^1.4.1",
+    "request": "^2.72.0",
     "rootpath": "^0.1.2"
   }
 }
