--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build: .
     container_name: web_jiralo
     volumes: 
-      - $(pwd):/home/supjiralo
+      - $PWD:/home/supjirallo
     ports:
       - "3000:3000"
 
