--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/titouanfreville/SupJirallo#readme",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.1",
     "express": "^4.14.0",
@@ -29,6 +30,7 @@
     "express-session": "^1.13.0",
     "jsonwebtoken": "^7.0.1",
     "lodash": "^4.13.1",
+    "merge-descriptors": "^1.0.1",
     "mongoose": "^4.5.0",
     "mongoskin": "^2.1.0",
     "q": "^1.4.1",
