--- a/package.json
+++ b/package.json
@@ -22,19 +22,23 @@
   },
   "homepage": "https://github.com/titouanfreville/SupJirallo#readme",
   "dependencies": {
+    "angoose": "^0.3.21",
     "bcrypt": "^0.8.7",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.1",
+    "chai": "^3.5.0",
     "express": "^4.14.0",
     "express-jwt": "^3.4.0",
     "express-session": "^1.13.0",
     "jsonwebtoken": "^7.0.1",
     "lodash": "^4.13.1",
     "merge-descriptors": "^1.0.1",
+    "mocha": "^2.5.3",
     "mongoose": "^4.5.0",
     "mongoskin": "^2.1.0",
     "q": "^1.4.1",
     "request": "^2.72.0",
-    "rootpath": "^0.1.2"
+    "rootpath": "^0.1.2",
+    "should": "^9.0.2"
   }
 }
