--- a/Dockerfile.compass
+++ b/Dockerfile.compass
@@ -7,4 +7,4 @@ RUN mkdir /home/style
 VOLUME /home/style
 WORKDIR /home/style
 
-CMD compass watch --sass-dir scss --force -s expand . 
+CMD compass watch --sass-dir scss --force . 
