--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -10,5 +10,5 @@ COPY . /home/supjirallo
 
 WORKDIR /home/supjirallo
 
-CMD sleep 10s; mocha --recursive -w tests; 
+CMD sleep 10s; mocha --recursive --harmony_proxies -w tests; 
 
