UPDATED git ignore to avoid new ide conflice. Please do the same if you use one ;)

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,22 @@ sftp-config.json
 *.css.map
 
 angoose-client-*
+
+###NetBeans###
+
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+
+###IntelliJ###
+
+*.iml
+*.ipr
+*.iws
+.idea/
+
