Test work quite nicely && efficiently. Some are still a bit random cause of asynch way :'(

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -10,5 +10,4 @@ COPY . /home/supjirallo
 
 WORKDIR /home/supjirallo
 
-CMD sleep 10s; mocha --recursive --harmony_proxies -w tests; 
-
+CMD sleep 10s; mocha --recursive --harmony_proxies tests
