--- a/package.json
+++ b/package.json
@@ -30,11 +30,16 @@
     "express-jwt": "^3.4.0",
     "express-session": "^1.13.0",
     "jsonwebtoken": "^7.0.1",
+    "jwt-simple": "^0.5.0",
     "lodash": "^4.13.1",
     "merge-descriptors": "^1.0.1",
     "mongoose": "^4.5.0",
+    "mongoose-api": "0.0.2",
     "mongoose-schema-extend": "^0.2.2",
     "mongoskin": "^2.1.0",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
     "q": "^1.4.1",
     "request": "^2.72.0",
     "rootpath": "^0.1.2"
@@ -42,6 +47,7 @@
   "devDependencies": {
     "mocha": "^2.5.3",
     "mocha-jshint": "^2.3.1",
+    "nodemon": "^1.9.2",
     "should": "^9.0.2"
   }
 }
