--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mocha": "^2.5.3",
     "mocha-jshint": "^2.3.1",
     "nodemon": "^1.9.2",
-    "should": "^9.0.2"
+    "should": "^9.0.2",
+    "supertest": "^1.2.0"
   }
 }
