--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.1",
     "express": "^4.14.0",
+    "express-flash-notification": "^0.4.0",
     "express-jwt": "^3.4.0",
     "express-session": "^1.13.0",
     "jsonwebtoken": "^7.0.1",
