--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "mongoose-schema-extend": "^0.2.2",
     "mongoskin": "^2.1.0",
     "morgan": "^1.7.0",
+    "nodemailer": "^2.4.2",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
     "q": "^1.4.1",
     "request": "^2.72.0",
-    "rootpath": "^0.1.2"
+    "rootpath": "^0.1.2",
+    "xoauth2": "^1.1.0"
   },
   "devDependencies": {
     "mocha": "^2.5.3",
