--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "supjirallo",
   "version": "0.0.1",
   "description": "School project aiming to recreate an agile ticket manager. ",
-  "main": " app.js",
+  "main": " node.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -30,7 +30,6 @@
     "express-flash-notification": "^0.4.0",
     "express-jwt": "^3.4.0",
     "express-session": "^1.13.0",
-    "jsonwebtoken": "^7.0.1",
     "jwt-simple": "^0.5.0",
     "lodash": "^4.13.1",
     "merge-descriptors": "^1.0.1",
@@ -40,9 +39,6 @@
     "mongoskin": "^2.1.0",
     "morgan": "^1.7.0",
     "nodemailer": "^2.4.2",
-    "passport": "^0.3.2",
-    "passport-jwt": "^2.1.0",
-    "q": "^1.4.1",
     "request": "^2.72.0",
     "rootpath": "^0.1.2",
     "xoauth2": "^1.1.0"
