--- a/bower.json
+++ b/bower.json
@@ -21,9 +21,9 @@
   ],
   "dependencies": {
     "angular": "^1.5.7",
-    "angular-resource": "^1.5.7",
     "angular-cookies": "^1.5.7",
     "angular-ui-router": "ui-router#^0.3.1",
-    "angular-route": "^1.5.7"
+    "angular-route": "^1.5.7",
+    "ng-dialog": "^0.6.2"
   }
 }
