--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemailer": "^2.4.2",
     "request": "^2.72.0",
     "rootpath": "^0.1.2",
+    "socket.io": "^1.4.8",
     "xoauth2": "^1.1.0"
   },
   "devDependencies": {
